RESOLVED FIXED117279
DFG CFA shouldn't filter ArrayModes with ALL_NON_ARRAY_ARRAY_MODES if the speculated type is not SpecArray
https://bugs.webkit.org/show_bug.cgi?id=117279
Summary DFG CFA shouldn't filter ArrayModes with ALL_NON_ARRAY_ARRAY_MODES if the spe...
Mark Lam
Reported 2013-06-05 18:09:59 PDT
r151229 "fourthTier: Clean up AbstractValue" (https://bugs.webkit.org/show_bug.cgi?id=117217) broke ecma_3/RegExp/perlstress-001.js.
Attachments
the patch (9.56 KB, patch)
2013-06-05 20:49 PDT, Filip Pizlo
mhahnenberg: review+
Filip Pizlo
Comment 1 2013-06-05 20:43:07 PDT
I have a fix. Will post it soon.
Filip Pizlo
Comment 2 2013-06-05 20:49:39 PDT
Created attachment 203900 [details] the patch
Mark Hahnenberg
Comment 3 2013-06-05 21:01:23 PDT
Comment on attachment 203900 [details] the patch Hmm, tricky! r=me
Filip Pizlo
Comment 4 2013-06-05 21:36:06 PDT
Note You need to log in before you can comment on or make changes to this bug.