DFG CFA shouldn't filter ArrayModes with ALL_NON_ARRAY_ARRAY_MODES if the speculated type is not SpecArray https://bugs.webkit.org/show_bug.cgi?id=117279 <rdar://problem/14078025>

Reviewed by Mark Hahnenberg.

* dfg/DFGAbstractValue.h:
(JSC::DFG::AbstractValue::filterArrayModesByType):



Canonical link: https://commits.webkit.org/135557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151284 268f45cc-cd09-0410-ab3c-d52691b4dbfc